<resources>
    <string name="app_name">StrengthLog</string>
    <string name="title_section0">Home</string>
    <string name="title_section1">Add Log</string>
    <string name="title_section2">Show Logs</string>
    <string name="title_section3">Show Program</string>
    <string name="title_section4">Add Program</string>
    <string name="title_section5">Add Exercise</string>
    <string name="title_section6">Show Exercise</string>
    <string name="title_section7">Show ProgramExercise</string>
    <string name="title_section8">Show Weight</string>
    <string name="title_section9">Add Weight</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="forum_program_hint">program</string>
    <string name="forum_workout_hint">workout</string>
    <string name="forum_exercise_hint">exercise</string>
    <string name="forum_date_hint">date</string>
    <string name="forum_time_hint">time</string>
    <string name="forum_weight_hint">weight</string>
    <string name="forum_reps_hint">reps</string>
    <string name="forum_sets_hint">sets</string>
    <string name="forum_commnet_hint">comment</string>


    <string name="accept">accept</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
